@@ -8,6 +8,7 @@
 package io.camunda.operate.webapp.rest.dto;
 
 import io.camunda.operate.store.ProcessStore;
+import io.camunda.operate.store.ProcessStore.ProcessKey;
 import io.camunda.operate.webapp.security.permission.PermissionsService;
 import io.camunda.webapps.schema.entities.ProcessEntity;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -16,6 +17,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Schema(
     name = "Process group object",
@@ -33,24 +35,28 @@ public class ProcessGroupDto {
   private List<ProcessDto> processes;
 
   public static List<ProcessGroupDto> createFrom(
-      final Map<ProcessStore.ProcessKey, List<ProcessEntity>> processesGrouped) {
-    return createFrom(processesGrouped, null);
-  }
-
-  public static List<ProcessGroupDto> createFrom(
       final Map<ProcessStore.ProcessKey, List<ProcessEntity>> processesGrouped,
       final PermissionsService permissionsService) {
     final List<ProcessGroupDto> groups = new ArrayList<>();
-    processesGrouped.values().stream()
+
+    final Set<String> resourceIds =
+        processesGrouped.keySet().stream()
+            .map(ProcessKey::getBpmnProcessId)
+            .collect(Collectors.toSet());
+
+    final Map<String, Set<String>> permissionsByResourceId =
+        permissionsService.getProcessDefinitionPermissionsByResourceId(resourceIds);
+
+    processesGrouped
+        .values()
         .forEach(
             group -> {
               final ProcessGroupDto groupDto = new ProcessGroupDto();
-              final ProcessEntity process0 = group.get(0);
+              final ProcessEntity process0 = group.getFirst();
               groupDto.setBpmnProcessId(process0.getBpmnProcessId());
               groupDto.setTenantId(process0.getTenantId());
               groupDto.setName(process0.getName());
-              groupDto.setPermissions(
-                  permissionsService.getProcessDefinitionPermissions(process0.getBpmnProcessId()));
+              groupDto.setPermissions(permissionsByResourceId.get(process0.getBpmnProcessId()));
               groupDto.setProcesses(DtoCreator.create(group, ProcessDto.class));
               groups.add(groupDto);
             });
